# CPP-EX2

./: CMakeLists.txt  HANDOFF.md  PLAN.md  README.md  readme.txt
cpp_yaml_example/: generated.yml  main.cpp
docs/: HLD.md  map_comparison_docs.md
include/drone_mapper/: DroneControlImpl.h  ILidar.h  IMap3D.h  IMappingAlgorithm.h  Map3DImpl.h  MappingAlgorithmImpl.h  MapsComparison.h  MissionControlImpl.h  MockGPS.h  MockLidar.h  MockMovement.h  ParseUtils.h  ScanResultToVoxels.h  SimulationManager.h  SimulationReportWriter.h  SimulationRunFactoryImpl.h  SimulationRunImpl.h  VoxelKey.h  YamlConfigLoader.h
include/drone_mapper/types/: DroneTypes.h  LidarTypes.h  MapTypes.h  MissionTypes.h  SimulationTypes.h
src/: DroneControlImpl.cpp  Map3DImpl.cpp  MappingAlgorithmImpl.cpp  MapsComparison.cpp  MissionControlImpl.cpp  MockGPS.cpp  MockLidar.cpp  MockMovement.cpp  ScanResultToVoxels.cpp  SimulationManager.cpp  SimulationReportWriter.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp  YamlConfigLoader.cpp  drone_mapper_simulation_main.cpp  maps_comparison_main.cpp
tests/: CMakeLists.txt  test_mocks.h  test_support.h
tests/components/: drone_control_test.cpp  mapping_algorithm_test.cpp  maps_comparison_test.cpp  mission_control_test.cpp  mock_lidar_test.cpp  simulation_manager_test.cpp  simulation_run_test.cpp
tests/integration/: integration_test.cpp
